<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/shape1"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:background="@color/green_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_2"
            app:layout_constraintBottom_toBottomOf="@id/shape1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/openNavView"
            app:layout_constraintTop_toTopOf="@id/openNavView" />

        <TextView
            android:id="@+id/fragmentTitle"
            style="@style/TitleFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_1"
            android:paddingHorizontal="24dp"
            android:paddingTop="48dp"
            android:paddingBottom="@dimen/margin_default"
            android:text="@string/detailFragmentTitle"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/openNavView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Open menu"
            android:paddingStart="36dp"
            android:paddingTop="24dp"
            android:paddingEnd="36dp"
            android:paddingBottom="8dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_baseline_person_outline_24"
            app:layout_constraintBottom_toBottomOf="@id/fragmentTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/shape2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_3"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shape1" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:translationY="-140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shape2"
            app:roundPercent="1"
            tools:src="@tools:sample/avatars" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_4"
            android:scaleX="1.01"
            android:scaleY="1.01"
            android:translationY="-140dp"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:numStars="5"
            android:rating="3"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:theme="@style/RatingBarTheme"
            android:translationX="-42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shape2" />

        <ImageView
            android:id="@+id/btnLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:contentDescription="Button like"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_round_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ratingBar"
            app:tint="@color/red" />

        <TextView
            android:id="@+id/name"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/price"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name"
            tools:text="$" />

        <TextView
            android:id="@+id/qualityTitle"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/quantityTitle"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/btnIncrease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnIncrease" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIncrease"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@drawable/shape_7"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/btnUpText"
            android:textColor="@color/green_1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:text="@string/defaultStartQuantity"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/btnIncrease"
            app:layout_constraintEnd_toStartOf="@id/btnIncrease"
            app:layout_constraintTop_toTopOf="@id/btnIncrease" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReduce"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:background="@drawable/shape_7"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/btnDownText"
            android:textColor="@color/green_1"
            android:textScaleX="1.5"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnIncrease"
            app:layout_constraintEnd_toStartOf="@id/quantity"
            app:layout_constraintTop_toTopOf="@id/btnIncrease" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_6"
            android:layout_marginTop="@dimen/margin_between_parts"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:paddingHorizontal="16dp"
            android:text="@string/btnSubmitText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnIncrease" />

        <TextView
            android:id="@+id/recommendProductsTitle"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_between_parts"
            android:text="@string/recommendProductsTitle"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendProductsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recommendProductsTitle"
            tools:listitem="@layout/speciality_item_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>